[bug 851487] Make question tools collapsable

--- a/media/less/questions.less
+++ b/media/less/questions.less
@@ -389,6 +389,10 @@ h2 {
       }
     }
   }
+
+  #report-abuse {
+    margin-bottom: 20px;
+  }
 }
 
 .highlight-box {
